# engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  main.cpp  test.txt  total
.cache/clangd/index/: debug.cpp.A765EA5831B4E9EA.idx  debug.h.29A7B6D2C3E60D87.idx  defines.h.6D33687D96E5D6E9.idx  test.cpp.EB83BF2E9F0467FB.idx
Testing/Temporary/: CTestCostData.txt
editor/: CMakeLists.txt  main.cpp
editor/Editor/: Editor.cpp  Editor.h
editor/Editor/UI/: EditorUI.h  EditorUI_apple.cpp  EditorUI_win32.cpp
editor/Editor/UI/Widget/: FileWidget.cpp  FileWidget.h  Widget.h
engine/: CMakeLists.txt  main.cpp
engine/.cache/clangd/index/: debug.h.FDC8858B2A9880CF.idx  defines.h.09AD905B76046E4D.idx  test.cpp.EB83BF2E9F0467FB.idx
engine/include/engine/: Engine.h  VisualInterface.h  Window.h  Window_apple.h  Window_win32.h
engine/include/engine/AssetManager/: AssetLoader.h  AssetManager.h  SceneLoader.h  TextLoader.h
engine/include/engine/AssetManager/ObjectReflection/: ObjectFactory.h  ReflectionMacro.h
engine/include/engine/Component/: Component.h
engine/include/engine/Input/: InputSet.h  Key.h  Keybind.h
engine/include/engine/Object/: Object.h  RegistrationObject.h
engine/include/engine/Scene/: Engine.h  Object.h  Scene.h  VisualInterface.h  World.h
engine/include/engine/util/: debug.h  defines.h  vector.h
engine/src/: Engine.cpp  Engine_apple.cpp  Engine_win32.cpp  VisualInterface.cpp  Window.cpp  Window_apple.cpp  Window_win32.cpp  temp.cpp
engine/src/AssetManager/: AssetLoader.cpp  AssetManager.cpp  SceneLoader.cpp  TextLoader.cpp
engine/src/AssetManager/ObjectReflection/: ObjectFactory.cpp
engine/src/Input/: InputSet.cpp
engine/src/Object/: Object.cpp  RegistrationObject.cpp
engine/src/Scene/: Engine.cpp  Object.cpp  Scene.cpp  VisualInterface.cpp  World.cpp
engine/tests/: asset_manager_test.cpp  log_test.cpp  scene_test.cpp  window_test.cpp
project/: CMakeLists.txt  scene1.json  scene2.json  world.json
project/include/project/: MyObject.h  defines.h
project/src/: MyObject.cpp
